Ajustando variables database

--- a/odoo17.conf
+++ b/odoo17.conf
@@ -1,9 +1,9 @@
 [options]
-admin_passwd = Agerpix12345
-db_host = False
-db_port = False
-db_user = odoo17
-db_password = Agerpix12345
+admin_passwd = &(@admin_passwd)s
+db_host = &(@db_host)s
+db_port = &(@db_port)s
+db_user = &(@db_user)s
+db_password = &(@db_password)s
 addons_path = addons,custom-addons
 logfile = /var/log/odoo17.log
 xmlrpc_port = 8069
