Ajustando variables database

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     buildCommand: |
       apt-get update && \
-      apt-get install -y libsasl2-dev libldap2-dev libssl-dev && \
+      apt-get install -y gcc libsasl2-dev libldap2-dev libssl-dev && \
       pip install --upgrade pip && \
       pip install -r requirements.txt
     startCommand: odoo -c odoo.conf
