--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ PyPDF2==2.12.1
 pypng==0.20220715.0
 pyserial==3.5
 python-dateutil==2.8.2
-ldap3
+ldap3==2.9.1  # o la versión que necesites
 python-ldap==3.4.3
 python-stdnum==1.19
 pytz==2025.2
