--- a/odoo17.conf
+++ b/odoo17.conf
@@ -1,6 +1,6 @@
 [options]
 admin_passwd = Agerpix12345
-db_host = https://ccazzkctfgfxfmlcdcgf.supabase.co
+db_host = ccazzkctfgfxfmlcdcgf.supabase.co
 db_port = 5432
 db_user = odoo17
 db_password = Agerpix12345
