--- a/odoo17.conf
+++ b/odoo17.conf
@@ -5,5 +5,5 @@ db_port = 5432
 db_user = odoo17
 db_password = Agerpix12345
 addons_path = addons,custom-addons
-logfile = /var/log/odoo17.log
-xmlrpc_port = 8069
+logfile = ./odoo17.log
+#xmlrpc_port = 8069
