--- a/odoo17.conf
+++ b/odoo17.conf
@@ -1,9 +1,10 @@
 [options]
 admin_passwd = Agerpix12345
-db_host = ccazzkctfgfxfmlcdcgf.supabase.co
+db_host = dpg-d0me633e5dus738eq540-a
 db_port = 5432
-db_user = odoo17
-db_password = Agerpix12345
+db_user = postres_psico_user
+db_password = uuJq5H5mNzkLsnBqK106t7wimjuh5oIt
 addons_path = addons,custom-addons
 logfile = ./odoo17.log
+db_name = postres_psico
 #xmlrpc_port = 8069
