--- a/odoo17.conf
+++ b/odoo17.conf
@@ -4,5 +4,5 @@ db_host = dpg-d0me633e5dus738eq540-a
 db_port = 5432
 db_user = postres_psico_user
 db_password = uuJq5H5mNzkLsnBqK106t7wimjuh5oIt
-addons_path = addons,custom-addons
+addons_path = /mnt/extra-addons,/usr/lib/python3/dist-packages/odoo/addons
 logfile = ./odoo17.log
